# iscc-skills

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  marketplace.json  pyproject.toml
.claude-plugin/: marketplace.json
iscc-brand-guidelines/.claude-plugin/: plugin.json
iscc-python-developer/.claude-plugin/: plugin.json
iscc-python-developer/skills/iscc-python-developer/references/: repository-guide.md
iscc-standards-expert/.claude-plugin/: plugin.json
iscc-toolkit/.claude-plugin/: plugin.json
iscc-toolkit/skills/iscc-toolkit/: SKILL.md
iscc-toolkit/skills/iscc-toolkit/references/: script-usage-guide.md
iscc-toolkit/skills/iscc-toolkit/tools/: iscc_compare.py  iscc_detect.py  iscc_distance.py  iscc_generate.py  iscc_inspect.py  iscc_keypair.py  iscc_metadata_embed.py  iscc_metadata_extract.py  iscc_search.py  iscc_sign.py  iscc_thumbnail.py  iscc_utils.py  iscc_validate.py
skills/iscc-python-developer/references/: iscc-overview.md  python-guidelines.md
skills/iscc-toolkit/: SKILL.md
skills/iscc-toolkit/tools/: iscc_batch.py  iscc_compare.py  iscc_declare.py  iscc_normalize.py  iscc_text_extract.py  iscc_units.py  iscc_verify.py
tests/: test_iscc_compare.py
